# libadwaitamm-cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  CMakeLists.txt  README.md
{{ cookiecutter.project_slug }}/cmake/: GlibUtils.cmake  find_system_libs.cmake  glib_compile_schemas.cmake  glib_utils.cmake  projectdefinitions.h.in
{{ cookiecutter.project_slug }}/data/: CMakeLists.txt  gresource.xml.in  gschema.xml.in
{{ cookiecutter.project_slug }}/data/ui/: headerbar.xml  menu.xml  preferences.xml  window.xml
{{ cookiecutter.project_slug }}/include/: preferences.h
{{ cookiecutter.project_slug }}/src/: CMakeLists.txt  application.cpp  main.cpp  preferences.cpp  window.cpp
{{ cookiecutter.project_slug }}/src/include/: application.h  preferences.h  templatewidget.h  window.h
